# HaletasWeb

./: .gitignore  CMakeLists.txt  Header Files.filters  Home.h  Links.h  Main.cpp  README.md  Tag.h  Website.sln  Website.vcxproj  Website.vcxproj.filters  deploy.yml  home.html  index.html  links.html  package-lock.json  projects.html  styles.css  website.dsp
.github/workflows/: build-and-deploy.yaml  build.yaml  deploy.yml
LSIMdocs/: 001test.md  001welcome.md  002gettingStarted.md  002otherTest.md  003fixingLauncherIssues.md  004theBasics.md  005movement.md  006transformations.md  007creations.md  008textures.md  009fileIO.md  010goingFurther.md  011workingWithConfigs.md  012logger.md  013fileIO.md  014otherSystems.md  015primitives.md  015theEnd.md  016mesh.md  017light.md  018gui.md  019inputs.md  020texture.md  021programmingYourGame.md  022exampleGame.md
Src/: CMakeLists.txt  Main.cpp  Tag.h  haletasWebSetup.h  js.cpp  js.h  setup.h  style.h
Src/JS/: buildJS.h  conditionals.h  console.h  function.h  js.h  jsCore.h  typeTraits.h  variable.h
Src/pages/: 404.html.h  documentation.html.h  index.h  index.html.h  links.h  links.html.h  projects.html.h
Src/pages/docs/: LSIMdocs.h
Src/scripts/: skillBallPit.h  skillBallPit.js.h
Src/styles/: repoCardStyles.css.h  style.css.h
Src/utils/misc/: misc.cpp  misc.h
Src/utils/nav/: nav.cpp  nav.h
Src/utils/repos/: repos.cpp  repos.h
scripts/: skillBallPit.js
